tests/resource/invalid/type/definition/reassign_non_mut.mamba
class A
    def mut my_num: Int := 10


def a := A()
a.my_num := 20
